--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,58 @@
----
-layout: default
----
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Vocab-recommender by istavrak</title>
 
-<article class="post">
-  <h1>{{ page.title }}</h1>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-light.css">
+    <meta name="viewport" content="width=device-width">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header>
+        <h1>Vocab-recommender</h1>
+        <p></p>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+        <p class="view"><a href="https://github.com/istavrak/vocab-recommender">View the Project on GitHub <small>istavrak/vocab-recommender</small></a></p>
 
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
-  </div>
-</article>
+
+        <ul>
+          <li><a href="https://github.com/istavrak/vocab-recommender/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/istavrak/vocab-recommender/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/istavrak/vocab-recommender">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>{{ page.title }}</h3>
+        <div class="entry">
+          {{ content }}
+        </div>
+      
+        <div class="date">
+          Written on {{ page.date | date: "%B %e, %Y" }}
+        </div>
+      </section>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/istavrak">istavrak</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+      </footer>
+    </div>
+    <script src="javascripts/scale.fix.js"></script>
+              <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-6312488-14");
+            pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
+
+  </body>
+</html>
