Adding disqus to the post layout

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,6 +36,8 @@
         <div class="date">
           Written on {{ page.date | date: "%B %e, %Y" }}
         </div>
+        
+         {% include disqus.html %}
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/istavrak">istavrak</a></p>
