--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Approach to leverage Websites to APIs through Semantics.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Approach to leverage Websites to APIs through Semantics</h3>
 
 <p>The transformation of Websites to APIs refers to the steps needed to leverage the Web content to self-defined data structures that can be consumed by machines and Web agents, called semantic annotations. Cornerstone requirement for this to happen is the incorporation of the correct vocabulary terms in a website. The presented approach addresses this challenge by helping to identify the most appropriate set of Linked Open Vocabulary terms for a given Web content context by leveraging the existing dynamics within the LOV graph and the LOD cloud.</p>
 
