--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Vocab-recommender</h1>
+        <h1><a href="{{ site.baseurl }}">Vocab-recommender</a></h1>
         <p></p>
 
         <p class="view"><a href="https://github.com/istavrak/vocab-recommender">View the Project on GitHub <small>istavrak/vocab-recommender</small></a></p>
