Update UI to allow opting out from multimedia terms

--- a/src/main/webapp/resources/css/core.css
+++ b/src/main/webapp/resources/css/core.css
@@ -5,3 +5,16 @@
 .green {
     color: green;
 }
+
+.static {
+    float: left;
+    height: 40px;
+    line-height: 40px;
+    margin-right: 10px;
+}
+
+.static-box {
+    float: left;
+    width: auto;
+    margin-top: 0px;
+}
